# nvim-hs

./: .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.build.sh  .travis.yml  CHANGELOG.md  HACKING.md  HLint.hs  LICENSE  README.md  RELEASE.md  TestPlugins.hs  TestPlugins.sh  TestPlugins.vim  api  flake.nix  fourmolu.yaml  nvim-hs-devel.sh  nvim-hs.cabal  nvim-hs.sh  stack-ghc-9.0.yaml  stack-ghc-9.2.yaml  stack-ghc-9.4.yaml  stack-ghc-9.6.yaml  stack-ghc-9.8.yaml  stack-template.hsfiles  stack.yaml
.github/workflows/: ci.yml
TestPlugins/: TestFunctions.hs
apiblobs/: 0.1.7.msgpack  0.10.4.msgpack  0.11.0-nightly.msgpack  0.2.0.msgpack  0.3.0.msgpack  0.4.3.msgpack  0.5.0.msgpack  0.6.1.msgpack  0.8.0.msgpack  README.md
example/: nvim.hs
example/lib/: Fibonacci.hs  Random.hs
example/lib/Fibonacci/: Plugin.hs
example/lib/Random/: Plugin.hs
examples/lib/Fibonacci/: Plugin.hs
examples/lib/Random/: Plugin.hs
executable/: Main.hs
src/: Neovim.hs
src/Neovim/: Classes.hs  Config.hs  Exceptions.hs  Log.hs  Main.hs  Plugin.hs  Test.hs  Util.hs
src/Neovim/API/: ByteString.hs  Parser.hs  TH.hs  Text.hs
src/Neovim/Compat/: Megaparsec.hs
src/Neovim/Context/: Internal.hs
src/Neovim/Internal/: RPC.hs
src/Neovim/Plugin/: Classes.hs  IPC.hs  Internal.hs
src/Neovim/Plugin/IPC/: Classes.hs
src/Neovim/RPC/: Classes.hs  Common.hs  EventHandler.hs  FunctionCall.hs  SocketReader.hs
srcos/unix/Neovim/: OS.hs
srcos/windows/Neovim/: OS.hs
test-files/: compile-error-for-quickfix-test1  compile-error-for-quickfix-test2  compile-error-for-quickfix-test3  compile-error-for-quickfix-test4  compile-error-for-quickfix-test5  compile-error-for-quickfix-test6
test-suite/Neovim/: EmbeddedRPCSpec.hs  EventSubscriptionSpec.hs  RunNeovimWithTestPluginsSpec.hs
test-suite/Neovim/API/: THSpec.hs  THSpecFunctions.hs
test-suite/Neovim/Plugin/: ClassesSpec.hs  ConfigHelperSpec.hs
test-suite/Neovim/RPC/: CommonSpec.hs  SocketReaderSpec.hs
tests/: AsyncFunctionSpec.hs  EmbeddedRPCSpec.hs  EventSubscriptionSpec.hs
tests/API/: THSpec.hs  THSpecFunctions.hs
tests/Plugin/: ClassesSpec.hs
tests/RPC/: CommonSpec.hs  SocketReaderSpec.hs
